// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/ChatInputField renders correctly 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        {
          "borderWidth": undefined,
          "maxHeight": 294,
          "minHeight": 54,
          "width": 367.5,
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          {
            "paddingTop": 0,
          },
        ]
      }
      testID="TextInput"
      value="value"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/ChatInputField renders correctly focused/blur 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        {
          "borderWidth": undefined,
          "maxHeight": 294,
          "minHeight": 54,
          "width": 367.5,
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          {
            "paddingTop": 0,
          },
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/ChatInputField renders correctly focused/blur 2`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        {
          "borderWidth": undefined,
          "maxHeight": 294,
          "minHeight": 54,
          "width": 367.5,
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          {
            "paddingTop": 0,
          },
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;
